<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">sakka H&amp;P</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="search_here" tools:ignore="TypographyEllipsis">Search here...</string>
    <string name="categories_for_you" tools:ignore="TypographyEllipsis">Categories for you...</string>
    <string name="home">Home</string>
    <string name="ImageCardForFlat">TODO</string>
    <string name="flats">Flats</string>
    <string name="rooms">Rooms</string>
    <string name="best_deals_for_you">Best deals for you</string>
    <string name="todo">TODO</string>
    <string name="homeImage">TODO</string>
    <string name="add_your_property">Add Property</string>
    <string name="update_profile_picture">Add Profile</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="back_button_to_go_back">Back Button to go back</string>
    <string name="add_your_property1">Add Your Property</string>
    <string name="enter_property_location">Address</string>
    <string name="enter_type_example_sell_or_rent">Sell/ Rent</string>
    <string name="enter_description_of_property">Description of Property</string>
    <string name="enter_title_for_your_property">Property Title</string>
    <string name="enter_owner_name">Name</string>
    <string name="enter_contact_no">Phone no.</string>
    <string name="enter_price">Price</string>
    <string name="enter_category_ex_home_villas_flats">Category i.e Flats</string>
    <string name="add_image">Add Image</string>
    <string name="add_property">Add Property</string>
    <string name="go_back">go_back</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="welcome_to">Welcome To</string>
    <string name="sakka_h_n_p">Sakka H N\' P</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_sign_up">Name</string>
    <string name="_email_sign_up">Email</string>
    <string name="password_sign_up">Password</string>
    <string name="confirm_password_sin_up">Confirm Password</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account ? Login</string>
    <string name="welcome_to_login">Welcome To</string>
    <string name="sakka_hh">sakka HH</string>
    <string name="login">Login</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="text_login">Login</string>
    <string name="property_location">Property Location</string>
    <string name="apartment_title">Apartment</string>
    <string name="property_image">property_image</string>
    <string name="property_price">property_price</string>
    <string name="don_t_have_an_account_create_account">Don\'t have an account ? Create Account</string>
    <string name="_2_bedrooms_apartment">2 bedrooms Apartment</string>
    <string name="welcome_to_our_detail">Welcome to our charming 2-bedroom apartment, nestled in a vibrant urban neighborhood. This cozy yet spacious unit offers the perfect blend of comfort and convenience. As you step inside, you\'re greeted by an inviting living space adorned with modern décor and ample natural light filtering through large windows.</string>
    <string name="description">Description :-</string>
    <string name="back_button_to_go_back_details">Back Button to go back</string>
    <string name="_200">$200</string>
    <string name="sell">Sell</string>
    <string name="location_detail">XX, XXXXXX, XXXXXX</string>
    <string name="_no_bedrooms_">2 Bedrooms Apartment</string>
    <string name="contact_details">Contact Details :-</string>
    <string name="call_owner">Call Owner</string>
    <string name="book_property">Book Property</string>
    <string name="owner_name">Owner Name:- Mr.John Dae</string>
    <string name="phone_no_91_852475935" tools:ignore="TypographyDashes">Phone No:– +91-852475935</string>
    <string name="favorites_detail">favorites</string>
    <string name="back_button_listing">Back Button to go back</string>
    <string name="add_property_page">Add property</string>
    <string name="saddka_h_p_add_property">Sakka House &amp;Property</string>
    <string name="fill_all_fields">Fill All Fields</string>
    <string name="sakka_house_property"><![CDATA[Sakka House & Property]]></string>

    // navigation menu
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="authorised_agent">Authorised Agent</string>
    <string name="agent_name">Name</string>

</resources>