<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/dark_grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.DetailsActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/_2_bedrooms_apartment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hom1"
        android:scaleType="center" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/back_button_to_go_back_details"
        android:padding="8dp"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_to_fav"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:autofillHints="favorite"
        android:contentDescription="@string/favorites_detail"
        android:src="@drawable/baseline_favorite_24"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>


    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="150dp"
        android:id="@+id/card_view"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#2D138D"
        app:cardCornerRadius="16dp">

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/ic_price"
            android:text="@string/_200"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="150dp"
        android:id="@+id/card_view2"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#66D816"
        app:cardCornerRadius="16dp">

        <TextView
            android:id="@+id/rent_sell"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginEnd="@+id/card_view"
            android:background="@drawable/ic_price"
            android:text="@string/sell"
            android:textAlignment="center"
            android:textColor="#F8F5F5"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/location"
        android:text="@string/location_detail"
        android:textStyle="italic"
        android:textSize="20sp"
        android:maxLines="2"

        app:layout_constraintTop_toBottomOf="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/short_description"
        android:text="@string/_no_bedrooms_"
        android:textStyle="italic"
        android:textSize="20sp"
        android:maxLines="2"

        app:layout_constraintTop_toBottomOf="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@+id/short_description"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/dark_orange"
        android:text="@string/description"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:maxLines="6"
        android:text="@string/welcome_to_our_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <TextView
        android:id="@+id/contact_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textColor="@color/dark_orange"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/contact_details"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/callButton"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/call_owner"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/contact_no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/book_property"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/book_property"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            app:layout_constraintTop_toBottomOf="@id/contact_no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"/>


    </LinearLayout>



    <TextView
        android:id="@+id/owner_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/contact_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:text="@string/owner_name"
        android:layout_marginTop="4dp"
        android:maxLines="6"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"/>
    <TextView
        android:id="@+id/contact_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/owner_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:text="@string/phone_no_91_852475935"
        android:layout_marginTop="4dp"
        android:maxLines="6"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>