<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.SignUpActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/realestate_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sakka_h_n_p"
        android:layout_below="@+id/welcome"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Image icon -->


    <ImageView
        android:id="@+id/icon_image"
        android:layout_width="79dp"
        android:layout_height="85dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="13dp"
        android:src="@drawable/homelogo" />


    <LinearLayout
        android:background="@drawable/layout_bg"
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:padding="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        >

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="38dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:padding="16dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/name_sign_up"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:background="@drawable/edit_bg"
                    android:padding="24dp"/>

                <EditText
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/_email_sign_up"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:background="@drawable/edit_bg"
                    android:padding="24dp"/>

                <EditText
                    android:id="@+id/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/password_sign_up"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:background="@drawable/edit_bg"
                    android:padding="24dp"/>

                <EditText
                    android:id="@+id/user_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/confirm_password_sin_up"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:background="@drawable/edit_bg"
                    android:padding="24dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:layout_margin="16dp"
                    android:text="@string/button_sign_up"
                    android:textAllCaps="false"
                    android:background="@drawable/button_bg"
                    android:textColor="@color/white"
                    android:textSize="22sp"/>

                <TextView
                    android:id="@+id/have_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/already_have_an_account_login"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:gravity="center_horizontal" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


</RelativeLayout>