<?xml version="1.0" encoding="utf-8"?><androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="16dp"
    app:cardCornerRadius="32dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bg4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/room1"
            android:contentDescription="@string/property_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/card_bg"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apartment_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/property_location"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:backgroundTint="@color/dark_orange"
            app:cardCornerRadius="16dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/price3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_price"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</androidx.cardview.widget.CardView>