<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".fragment.AccountFragment">

    <!-- ScrollView containing all child elements -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <!-- Toolbar -->
            <include
                android:id="@+id/toolbar_1"
                layout="@layout/toolbar"/>

            <!-- Profile Details -->
            <LinearLayout
                android:id="@+id/profile_det"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/toolbar_1"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="50dp"
                    android:layout_height="55dp"
                    android:layout_margin="1dp"
                    android:src="@drawable/ic_account"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp"/>

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/name"
                    android:layout_marginEnd="10dp"
                    android:inputType="text"
                    android:padding="16dp"/>

                <EditText
                    android:id="@+id/user_email"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"/>
            </LinearLayout>

            <!-- RecyclerView to display the properties -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:layout_below="@id/profile_det"/>

        </RelativeLayout>
    </ScrollView>

    <!-- NavigationView and Button Layout commented out for future use -->
<!--    -->
<!--    <com.google.android.material.navigation.NavigationView-->
<!--        android:id="@+id/nav_view"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_gravity="start"-->
<!--        app:headerLayout="@layout/header"-->
<!--        app:menu="@menu/account_menu"/>-->

    <LinearLayout
        android:id="@+id/button_account_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="130dp"
            android:background="@drawable/button_bg"
            android:text="@string/update_profile_picture"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/add_property"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_bg_property"
            android:text="@string/add_your_property"
            android:textColor="@color/white"
            app:backgroundTint="@color/dark_orange"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_out"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg_signout"
            android:text="@string/sign_out"
            android:textColor="@color/black"/>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>
